--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,14 @@ app.jwtExpirationInMs = 604800000
 
 # Comma separated list of allowed origins
 app.cors.allowedOrigins = http://localhost:3000
+
+#aws s3
+aws.endpoint= https://motel-video.s3.ap-southeast-1.amazonaws.com
+aws.accessKey= AKIAVHFYBTGIYO5R42QK
+aws.secretKey= 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
+aws.s3.bucket= motel-video
+aws.s3.region= ap-southeast-1
+
+#Set max size for file
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
